@@ -75,6 +75,9 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <h2>News</h2><ul>
 
 <li>
+<DIV class="updated">Posted 12/14:</DIV>
+ I've updated Blackboard with your final overall grades.  May all your surprises be pleasant ones!  I hope you have Happy Holidays and a relaxing break.  I look forward to seeing some of you for 102 in January.  To all of you, best wishes!
+<li>
 <DIV class="updated">Posted 12/4:</DIV>
  The <A HREF="Repository/Exam3Outline.pdf">outline</A> and the <A HREF="Repository/SampleExam3.pdf">sample exam questions</A> and <A HREF="Repository/SampleExam3S.pdf">solutions</A> for the new stuff on the Final Exam are all now available.
 <li>
@@ -150,7 +153,7 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <TR><TH>#<TH>Starting
 <TH>Monday
 <TH>Wednesday
-<TH>Friday<!--15,15--><TR class="current"><TD class="weeknumber">15
+<TH>Friday<TR><TD class="weeknumber">15
 <TD class="date">11/28
 <TD class="topic">Fluids	<TD class="chapter">13
 
@@ -388,7 +391,7 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <TD>
 	<A HREF="Repository/F2.pdf">written</A><BR>
 	<A HREF="Repository/F2.mp3">audio</A>
-<TR><TD class="weeknumber">1
+<!--1,1--><TR class="current"><TD class="weeknumber">1
 <TD class="date">8/22
 <TD class="topic">Motion Diagrams	<TD class="chapter">1
 
