@@ -1,3 +1,4 @@
+12/14: I've updated Blackboard with your final overall grades.  May all your surprises be pleasant ones!  I hope you have Happy Holidays and a relaxing break.  I look forward to seeing some of you for 102 in January.  To all of you, best wishes!
 12/4: The [Exam3Outline.pdf outline] and the [SampleExam3.pdf sample exam questions] and [SampleExam3S.pdf solutions] for the new stuff on the Final Exam are all now available.
 12/2: The final exam will be on Thursday from 8:30-10:30am in our normal classroom.  You may bring a calculator and TWO sheets of notes.  It will be half old stuff and half new stuff (energy, thermodynamics, fluids).  
 #11/29: There will be a quiz tomorrow morning; it will only cover fluids.
